fix: ! align help text on the left

--- a/src/components/website/login/Login.scss
+++ b/src/components/website/login/Login.scss
@@ -195,6 +195,8 @@
 }
 
 .login-modal-input-help {
+    margin-right: auto;
+
     font-size: 14px;
     font-weight: 500;
     line-height: 17px;
